# rag-assistant-demo-

./: .env_example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  answer.txt  api_response.json  chroma.sqlite3  mypy.ini  pyproject.toml  requirements.txt  resp.json  ruff.toml  system_prompt.txt  system_prompt_security.txt  ui.py
.github/workflows/: ci.yml  gitleaks.yml  lint.yml  pip-audit.yml  sbom.yml
data/: dummy.md
data_golden/: dummy.md  project_overview.md  usage_notes.md
docs/: README.md  usage.md
github/workflows/: ci.yml
requirements/: .pre-commit-config.yaml  base.txt  dev.txt
scripts/: test-groq.ps1  test-security.ps1
src/rag_assistant/: api.py  config.py  ingest.py  ingest.py.bak  llm.py  llm_providers.py  memory.py  pipeline.py  providers.py  qa.py  retriever.py  schemas.py  utils.py
src/rag_assistant/prompts/: system_prompt.txt
src/rag_assistant/providers/: __init__.py  mock.py
storage_backup_20250919_064651/6acc7649-4225-4957-9e1c-a84111902caf/: index_metadata.pickle
tests/: golden.json  test_api.py  test_ask.py  test_golden.py  test_healthz.py  test_ingest.py  test_no_answer.py  test_prompt_safety.py  test_prompt_security.py  test_rag_quality.py  test_readyz.py  test_smoke.py
tests/fixtures/: golden.jsonl
