[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-assistant"
version = "0.1.0"
requires-python = ">=3.11"
description = "Minimal RAG assistant (LangChain + Chroma) with CLI & FastAPI."

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]