[build-system]
requires = ["setuptools>=68", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-assistant"
version = "0.1.0"
description = "Minimal RAG assistant (LangChain + Chroma) with CLI & FastAPI."
readme = "README.md"
requires-python = ">=3.11"

# Core runtime dependencies
dependencies = [
  "fastapi>=0.111,<0.116",
  "uvicorn[standard]>=0.30,<0.33",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",

  # LangChain + integrations (explicit to avoid surprise extras)
  "langchain>=0.2,<0.3",
  "langchain-core>=0.2,<0.3",
  "langchain-community>=0.2,<0.3",
  "langchain-chroma>=0.1.1",
  "langchain-huggingface>=0.0.3",

  # Vector store + embeddings stack
  "chromadb>=0.5.3",
  "sentence-transformers>=2.7.0",

  # BM25 lexical retriever
  "rank-bm25>=0.2.2",

  # HTTP clients (used in tests and examples)
  "requests>=2.32,<3",
  "httpx>=0.27,<0.28",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
# Provider SDKs — install as needed
providers = [
  "openai>=1.40,<2",
  "groq>=0.9,<1",
  "google-generativeai>=0.7,<1",
]

# Developer tooling and tests
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.5,<0.7",
  "mypy>=1.10,<2",
  "types-requests>=2.32",
]

# Everything (handy for local hacking)
all = [
  "openai>=1.40,<2",
  "groq>=0.9,<1",
  "google-generativeai>=0.7,<1",
  "pytest>=8.2,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.5,<0.7",
  "mypy>=1.10,<2",
  "types-requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/mwill20/rag-assistant-demo-"
Repository = "https://github.com/mwill20/rag-assistant-demo-"
Issues = "https://github.com/mwill20/rag-assistant-demo-/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- Tooling (optional but nice) ---

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
